Closed Bug 1729749 Opened 3 years ago Closed 3 years ago

Maximize(Restore) button does not work if Title Bar is enabled

Categories

(Core :: Widget: Win32, defect)

Firefox 94
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 --- verified

People

(Reporter: alice0775, Assigned: emk)

References

(Regression)

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

Steps to Reproduce:

  1. Open Nightly
  2. Enable TiTle Bar and Done
  3. Click Maximize/Restore Button

Actual Results:
Nothing happens.
Double click on Title Bar works as expected.

Expected Results:
Window should be resized.

Regression Window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=4ed1222e42887c69f6367638cdd1d29a13b6ba1c&tochange=e03c235c93c8a2090b4e6b8ab12ad2fcd7b1d46c

Has Regression Range: --- → yes
Has STR: --- → yes
Regressed by: 1718629
Summary: Maximize() button does not work if Title Bar is enabled → Maximize(Restore) button does not work if Title Bar is enabled

Library window, Page Info window and DevTool separate window are also affected.
Maybe it's affecting all the other windows.

Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → DUPLICATE

I'm not sure this is really a dupe. We should not handle WM_NCLBUTTONDOWN if the system title bar is shown.

Oops, I guess I read this wrong 😬, sorry!

Status: RESOLVED → REOPENED
Resolution: DUPLICATE → ---
Assignee: nobody → VYV03354
Status: REOPENED → ASSIGNED
Pushed by VYV03354@nifty.ne.jp: https://hg.mozilla.org/integration/autoland/rev/15a585e9d0a5 Handle WM_NCLBUTTONDOWN on the maximize button only if the system title bar is hidden. r=handyman
Status: ASSIGNED → RESOLVED
Closed: 3 years ago3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Blocks: 1730312
Flags: qe-verify+

Reproduced the issue on Nightly (2021-09-08).
Verified the issues as fixed with Fx Nightly 95.0a1 and Fx 94.0b4 on Windows 10x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: