Bug 1729749 - Handle WM_NCLBUTTONDOWN on the maximize button only if the system title bar is hidden. r=handyman

Differential Revision: https://phabricator.services.mozilla.com/D125016